# Kurone-ko-Timer

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release-windows.yml
docs/: DEVELOPMENT_JOURNAL.md  NEXT_VERSION_ROADMAP.md
docs/screenshots/: README.md
src/: App.css  App.test.tsx  App.tsx  windowFrameVisualPolish.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsi
src-tauri/src/: lib.rs  main.rs
src/e2e/: appPage.test.ts  appPage.ts  installE2EDriver.test.ts  installE2EDriver.ts
src/features/config/components/: ConfigPanel.test.tsx  ConfigPanel.tsx
src/features/dashboard/: store.test.ts  store.ts
src/features/dashboard/components/: Dashboard.css  Dashboard.tsx  (+4 more)
src/features/history/: store.test.ts  store.ts  summary.ts
src/features/music/: audio.test.ts  audio.ts  playlist.test.ts  playlist.ts  sources.test.ts  sources.ts  store.test.ts  store.ts
src/features/notifications/: sound.test.ts  sound.ts
src/features/settings/: store.test.ts  store.ts
src/features/timer/: model.test.ts  model.ts  persistence.test.ts  persistence.ts  store.test.ts  store.ts
src/shared/hydration/: useAppHydration.test.ts  useAppHydration.ts
src/shared/shortcuts/: useKeyboardShortcuts.test.tsx  useKeyboardShortcuts.ts
src/shared/window/: minimize.test.ts  minimize.ts  switcher.test.ts  switcher.ts
tests/e2e/: global-setup.ts  global-teardown.ts  onboarding.spec.ts  smoke.spec.ts
(+9 files in other folders)
