[package]
name = "kurone-ko"
version = "1.1.0"
description = "Minimal floating Pomodoro widget"
authors = ["KURONE-KO"]
edition = "2021"

[lib]
name = "kurone_ko_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2.3.1"
